--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 requests = "^2.32.3"
 pydantic-settings = "^2.6.1"
 python-dotenv = "^1.0.1"
+jinja2 = "^3.1.4"
+click = "^8.1.7"
 
 
 [tool.poetry.group.dev.dependencies]
